# ruststream-py

./: .gitignore  Cargo.toml  LICENSE  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml  release.yml
crates/ruststream-pyo3/: Cargo.toml  README.md
crates/ruststream-pyo3/src/: error.rs  lib.rs  message.rs  runtime.rs  subscriber.rs
py/ruststream-py/: Cargo.toml  README.md  pyproject.toml
py/ruststream-py/python/ruststream/: __init__.py  _broker.py  _interfaces.py  _message.py  _signature.py  _testing.py  app.py  conformance.py  context.py  failure.py  memory.py  runtime.py  testing.py
py/ruststream-py/python/ruststream/asyncapi/: __init__.py  _build.py  _errors.py  _schema.py  _serialize.py  _viewer.py
py/ruststream-py/python/ruststream/cli/: __init__.py  _loader.py  _main.py  _scaffold.py
py/ruststream-py/python/ruststream/codecs/: __init__.py  _base.py  _cbor.py  _json.py  _msgpack.py  _orjson.py  _raw.py  _registry.py
py/ruststream-py/python/ruststream/di/: __init__.py  _base.py  _dishka.py  _fastdepends.py  _noop.py
py/ruststream-py/python/ruststream/fastapi/: __init__.py  _di.py  _errors.py  _lifespan.py  _mounts.py
py/ruststream-py/python/ruststream/metrics/: __init__.py  _base.py  _errors.py  prometheus.py
py/ruststream-py/python/ruststream/validators/: __init__.py  _attrs.py  _base.py  _dataclass.py  _msgspec.py  _pydantic.py  _raw.py  _registry.py
py/ruststream-py/src/: lib.rs  memory.rs  message.rs  subscriber.rs
py/ruststream-py/tests/: conftest.py  test_app.py  test_asyncapi.py  test_cli.py  test_codec_broker.py  test_codecs.py  test_conformance.py  test_context_scopes.py  test_di_broker.py  test_di_dishka.py  test_di_fastdepends.py  test_failure_modes.py  test_fastapi.py  test_message_value.py  test_metrics.py  test_router_e2e.py  test_runtime_config.py  test_smoke.py  test_validator_broker.py  test_validators.py
