[project]
name = "ruststream-py-workspace"
version = "0.0.0"
description = "RustStream Python framework development workspace, not for publishing."
requires-python = ">=3.11,<3.15"
dependencies = []

[tool.uv]
package = false

[tool.uv.workspace]
members = ["py/*"]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "bandit[toml]>=1.7",
    "semgrep>=1.95",
    "codespell>=2.3",
    "zizmor>=1.0",
    "maturin>=1.7,<2.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "dishka>=1.10.1",
    "fast-depends>=3.0.8",
    "pyyaml>=6.0.3",
    "prometheus-client>=0.25.0",
    "click>=8.1.8",
    "fastapi>=0.136.3",
]


[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = ["target", "**/.venv", "py/*/python/**/_native*"]

[tool.ruff.lint]
select = [
    "E", "W",
    "F",
    "I",
    "N",
    "UP",
    "B",
    "A",
    "C4",
    "PT",
    "SIM",
    "RET",
    "RUF",
    "ASYNC",
    "S",
    "TID",
    "TCH",
    "PIE",
    "PYI",
    "PERF",
    "FURB",
    "LOG", "G",
    "T20",
    "ARG",
    "ANN",
]
ignore = [
    "ANN401",
    "S101",
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "ANN", "D", "ARG"]
"**/conftest.py" = ["ANN", "ARG"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fast_depends.Depends", "fastapi.Depends"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
warn_return_any = true
disallow_any_generics = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
files = ["py"]
exclude = ["target", "\\.venv", "dist", "py/.+/tests/"]

[[tool.mypy.overrides]]
module = "ruststream._native"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["orjson", "msgpack", "cbor2", "yaml", "prometheus_client", "msgspec"]
ignore_missing_imports = true


[tool.codespell]
skip = "target,*.lock,uv.lock,Cargo.lock,.git,.venv,dist,wheels,*.svg"
ignore-words-list = "crate,crates,ser,nd,implementors,statics,dependant"


[tool.bandit]
exclude_dirs = ["target", ".venv", "tests", "dist", "wheels"]
skips = []


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["py"]
addopts = "-ra --strict-markers --strict-config"
