[package]
name = "ruststream-py"
description = "PyO3 bindings for the RustStream messaging framework (native extension)."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
publish = false

[lib]
name = "ruststream_py_native"
crate-type = ["cdylib", "rlib"]

[lints]
workspace = true

[dependencies]
ruststream = { workspace = true, features = ["runtime", "json", "conformance"] }
ruststream-pyo3.workspace = true
pyo3.workspace = true
pyo3-async-runtimes.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "sync"] }
tokio-util.workspace = true
