[build-system]
requires = ["maturin>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "ruststream"
version = "0.2.0"
description = "Python bindings for the RustStream messaging framework."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { text = "MIT OR Apache-2.0" }
authors = [{ name = "RustStream contributors" }]
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = []

[project.optional-dependencies]
pydantic = ["pydantic>=2.6"]
msgspec = ["msgspec>=0.18"]
attrs = ["attrs>=23"]
dataclasses = []
dishka = ["dishka>=1.4"]
fast-depends = ["fast-depends>=2.4"]
orjson = ["orjson>=3.10"]
msgpack = ["msgpack>=1.0"]
cbor = ["cbor2>=5.6"]
asyncapi = ["pyyaml>=6.0"]
metrics = ["prometheus_client>=0.20"]
cli = ["click>=8.1"]
fastapi = ["fastapi>=0.110"]

[project.scripts]
ruststream = "ruststream.cli:main"

[project.urls]
Homepage = "https://github.com/powersemmi/ruststream-py"
Repository = "https://github.com/powersemmi/ruststream-py"

[tool.maturin]
python-source = "python"
module-name = "ruststream._native"
features = ["pyo3/extension-module"]
strip = true
include = [{ path = "python/ruststream/py.typed", format = "wheel" }]
